--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -10,7 +10,7 @@
         <servlet-class>com.vaadin.terminal.gwt.server.ApplicationServlet</servlet-class>
         <init-param>
             <param-name>application</param-name>
-            <param-value>pl.rafalmag.xmasgiftsdrawer.VaadinHW</param-value>
+            <param-value>pl.rafalmag.xmasgiftsdrawer.gui.MainWindow</param-value>
         </init-param>
     </servlet>
     
