--- a/build.gradle
+++ b/build.gradle
@@ -6,19 +6,22 @@ group = 'pl.rafalmag.xmas'
 version = '0.1'
 
 repositories {
-    mavenLocal()
+//    mavenLocal()
     mavenCentral()
-    maven { url 'http://oss.sonatype.org/content/repositories/snapshots/' }
+//    maven { url 'http://oss.sonatype.org/content/repositories/snapshots/' }
 }
 
 dependencies {
 //    compile gradleApi()
 //    groovy localGroovy()
 //    groovy 'org.codehaus.groovy:groovy-all:2.0.1'
+    groovy 'org.codehaus.groovy:groovy-all:2.1.1'
+    testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
+    testCompile 'org.hamcrest:hamcrest-core:1.3'
 //    testCompile 'org.spockframework:spock-core:1.0-groovy-2.0-SNAPSHOT'
 //	compile "org.codehaus.gmaven.runtime:gmaven-runtime-2.0:1.4"
 //	compile "org.codehaus.groovy:groovy-all:2.0.4"
-    groovy fileTree(dir: 'C:\\Program Files (x86)\\Groovy\\Groovy-2.0.5\\lib', include: '*.jar')
+//    groovy fileTree(dir: 'C:\\Program Files (x86)\\Groovy\\groovy-sdk-2.1.1\\lib', include: '*.jar')
 
     compile "com.vaadin:vaadin:6.8.5"
     compile "ch.qos.logback:logback-classic:1.0.7"
