--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
     compile 'javax.servlet:javax.servlet-api:3.1.0'
     compile "ch.qos.logback:logback-classic:1.1.2"
     compile "com.google.guava:guava:18+"
+    compile 'com.bloidonia:groovy-stream:0.8.1'
 //    compile "org.easytesting:fest-assert-core:2.0M8"
     testCompile 'org.assertj:assertj-core:1.7.0'
 }
