--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ version = '0.1'
 repositories {
     mavenCentral()
     maven { url 'http://oss.sonatype.org/content/repositories/snapshots/' }
+    maven { url 'http://www.i3s.unice.fr/~hogie/maven_repository/' }
+
 }
 
 dependencies {
@@ -23,4 +25,5 @@ dependencies {
     compile 'com.bloidonia:groovy-stream:0.8.1'
 //    compile "org.easytesting:fest-assert-core:2.0M8"
     testCompile 'org.assertj:assertj-core:1.7.0'
+    compile 'grph:grph:1.6+'
 }
