--- a/build.gradle
+++ b/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     testCompile 'org.assertj:assertj-core:1.7.0'
     compile 'grph:grph:1.6+'
     compile 'org.graphstream:gs-core:1.3'
+    compile 'org.graphstream:gs-algo:1.3'
 
 }
