--- a/build.gradle
+++ b/build.gradle
@@ -28,5 +28,6 @@ dependencies {
     compile 'grph:grph:1.6+'
     compile 'org.graphstream:gs-core:1.3'
     compile 'org.graphstream:gs-algo:1.3'
+    compile 'org.jgrapht:jgrapht-core:0.9.1'
 
 }
