--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'org.graphstream:gs-core:1.3'
     compile 'org.graphstream:gs-algo:1.3'
     compile 'org.jgrapht:jgrapht-core:0.9.1'
+    compile 'ch.qos.logback:logback-core:1.1.3'
 
 }
