--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,26 @@ apply plugin: 'idea'
 apply plugin: 'groovy'
 apply plugin: 'war'
 
+apply plugin: 'jacoco'
+apply plugin: 'com.github.kt3k.coveralls'
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.0.1'
+    }
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true // coveralls plugin depends on xml format report
+        html.enabled = true
+    }
+}
+
 group = 'pl.rafalmag.xmas'
 version = '0.1'
 
