removed algorithm (as it is now a xmas dependency)

--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,11 @@ version = '0.1'
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
+    compile 'pl.rafalmag.xmas:xmas:0.1'
     compile 'org.codehaus.groovy:groovy-all:2.3+'
     testCompile 'org.spockframework:spock-core:1.0-groovy-2.3'
     testCompile 'org.hamcrest:hamcrest-core:1.3'
