attempt to fix missing dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
  - git clone "https://github.com/rafalmag/xmas-gifts-drawer.git" xmas
  - cd xmas
  - chmod +x gradlew
- - gradlew install
+ - ./gradlew install
  - cd ..
  - chmod +x gradlew
  
